fix contactList phone visible

--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,8 +1,17 @@
 .contactItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 20px;
-    margin: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 20px;
+  margin: 15px;
+}
+.contactContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px;
+}
 
+.contactName {
+  margin-right: 15px;
 }
